[tool.poetry]
name = "aula16-bootcamp"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
